# fraction-demo

./: CMakeLists.txt  README.md
include/: array.hpp  fraction.hpp
src/: fraction.cpp  main.cpp
